# AI_Interview_system

./: .gitignore  README.md  firebase.json  pyproject.toml
.firebase/: hosting.ZnJvbnRlbmRcZGlzdA.cache
backend/: .env.example  .gitignore  requirements.txt  run.py  scratch_test.py
backend/app/: main.py
backend/app/api/: interviews.py
backend/app/core/: config.py  logging.py  security.py
backend/app/schemas/: schemas.py
backend/app/services/: analytics.py  llm_chains.py  resume_parser.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  firebase.js  index.css
frontend/src/components/: AuthContext.jsx  Navbar.jsx
frontend/src/pages/: History.jsx  Interview.jsx  Landing.jsx  Login.jsx  Report.jsx  Setup.jsx
