[project]
name = "interview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "fastapi==0.115.6",
    "firebase-admin>=7.3.0",
    "httpx==0.28.1",
    "langchain>=0.3.14",
    "langchain-core>=0.3.47",
    "langchain-groq>=0.3.1",
    "loguru==0.7.3",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "pypdf2==3.0.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "reportlab==4.2.5",
    "uvicorn[standard]==0.34.0",
]
